# pyEverything

./: .gitignore  .style.yapf  LICENSE  README.md  requirements.txt  setup.cfg
src/core/: __init__.py  file_system_helper.py  indexing.py
src/core/indexer/: __init__.py
src/core/indexer/whoosh/: __init__.py
src/frontend/cmd/: run.py
src/pyeverything/core/: file_system_helper.py  indexing.py  regexp_match_utils.py
src/pyeverything/core/indexer/: __init__.py
src/pyeverything/core/indexer/whoosh/: __init__.py  matching.py  query_result.py  regexp.py  utils.py
src/pyeverything/frontend/cmd/: run.py
src/pyeverything/vcs_ignore/: __init__.py
src/pyeverything/web/: __init__.py  run_everything.py
src/pyeverything/web/service/: indexer.py
src/vcs_ignore/: __init__.py
src/web/: __init__.py  run_everything.py
src/web/service/: __init__.py  index.py  indexer.py
