[metadata]
name = pyEverything-stonewell
version = 0.0.1
author = Jingnan Si
author_email = jingnan.si+eim@gmail.com
description = a simple file indexing server in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stonewell/pyEverything
project_urls =
    Bug Tracker = https://github.com/stonewell/pyEverything/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

python_requires = >=3.8
install_requires =
    appdirs
    flask
    whoosh
    filetype
    binaryornot
    globre
    termcolor

[options.packages.find]
where = src

[options.entry_points]
console-scripts =
    pyeverything.service = pyeverything.web.run_everything:main
    pyeverything = pyeverything.frontend.cmd.run:main

[flake8]
ignore = E111, E501, E402, E114
max-line-length = 160
exclude = .git,__pycache__
max-complexity = 10
